--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = "*"
 uvicorn = "*"
+fastapi = "*"
 
 [dev-packages]
+pytest = "*"
 
 [requires]
 python_version = "3.13"
